--- a/test.html
+++ b/test.html
@@ -4,19 +4,23 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-        body { border-top: 4px solid #00AC7F; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
+        body { border-top: 4px solid #00B386; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
         a { color: #0083b4; text-decoration: none; }
         #wr { margin: 60px auto; max-width: 760px; }
-        #mn { display: block; float: right; list-style: none; padding: 30px 0 0 0; }
+        #mn { display: block; float: right; list-style: none; padding: 15px 0 0 0; }
         #mn li { float: left; margin: 0; padding: 0 0 0 15px; }
         #mn li a { color: #999; display: block; padding: 0; }
+        #mn li a:hover { color: #333; }
         #ct { margin-top: 60px; }
     </style>
 </head>
 <body>
 <div id="wr">
     <nav>
-        <img src="https://vine.co/static/images/vine_glyph_2x.png" height="104" width="104">
+
+
+        <img src="logo2.png">
+
         <ul id="mn">
             <li><a href="#">Home</a></li>
             <li><a href="#">Demo</a></li>
