--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-        body { border-top: 4px solid #00B386; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
+        body { border-top: 4px solid #000; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
         a { color: #0083b4; text-decoration: none; }
         #wr { margin: 60px auto; max-width: 760px; }
         #mn { display: block; float: right; list-style: none; padding: 15px 0 0 0; }
@@ -19,7 +19,7 @@
     <nav>
 
 
-        <img src="logo2.png">
+        <img src="logo.png">
 
         <ul id="mn">
             <li><a href="#">Home</a></li>
