--- a/test.html
+++ b/test.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-        body { border-top: 4px solid #0083b4; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
-        a { color: #0083b4; text-decoration: none; }
+        body { border-top: 4px solid #005A7B; color: #333; font: 16px/24px Helvetica, Arial, sans-serif; margin: 0; padding: 0 20px; }
+        a { color: #005A7B; text-decoration: none; }
         #wr { margin: 60px auto; max-width: 760px; }
         #mn { display: block; float: right; list-style: none; padding: 15px 0 0 0; }
         #mn li { float: left; margin: 0; padding: 0 0 0 15px; }
         #mn li a { color: #999; display: block; padding: 0; }
-        #mn li a:hover { color: #0083b4; }
+        #mn li a:hover { color: #005A7B; }
         #ct { margin-top: 60px; }
     </style>
 </head>
