--- a/layout.html
+++ b/layout.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <title>Koara: Modular Lightweight Markup Language</title>
     <link rel="shortcut icon" href="favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {background: #fff; font: 18px/1.5 Arial,"Helvetica Neue",Helvetica,sans-serif; margin: 0 auto; max-width: 740px; padding: 60px 20px;}
         hr { background-color: #e5e5e5; border: 0; height: 1px; margin: 40px 0; }
