--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <title>Koara: Modular Lightweight Markup Language</title>
     <link rel="shortcut icon" href="favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {background: #fff; font: 18px/1.5 Arial,"Helvetica Neue",Helvetica,sans-serif; margin: 0 auto; max-width: 740px; padding: 60px 20px;}
         hr { background-color: #e5e5e5; border: 0; height: 1px; margin: 40px 0; }
@@ -34,7 +35,7 @@
     </li>
 </ol>
 
-<h2 id="1._introduction">1. Introduction</h2>
+<h2>1. Introduction</h2>
 
 <p>When building an application you can allow a
 <a href="https://en.wikipedia.org/wiki/Lightweight_markup_language">lightweight markup language</a> to enhance the user's
@@ -45,9 +46,9 @@ It requires the user to each time learn a different language and jeopardizes por
 <p>Koara is a modular lightweight markup language. The developer decides which parts of the syntax are allowed
 to be parsed. The rest will render as plain text.</p>
 
-<h2 id="2._syntax">2. Syntax</h2>
+<h2>2. Syntax</h2>
 
-<h3 id="2.1_paragraphs">2.1 Paragraphs</h3>
+<h3>2.1 Paragraphs</h3>
 
 <p><em>Koara:</em></p>
 
@@ -67,7 +68,7 @@ end a line with two or more spaces&lt;/p&gt;</code></pre>
 Koara uses soft wrapping, which means that a newline character will not result in an actual linebreak.
 If you do want a hard linebreak, you should end a line with 2 or more spaces.</p>
 
-<h3 id="2.2_headings">2.2 Headings</h3>
+<h3>2.2 Headings</h3>
 
 <p><em>Koara:</em></p>
 
@@ -101,7 +102,7 @@ Whitespace or blank lines are always optional in Koara.</p>
 <p><strong>Escaping</strong>: If you don't want Koara to parse a line as a heading, escape the equal sign by prepending a backslash.
 You can also escape all other characters used in the syntax.</p>
 
-<h3 id="2.3_lists">2.3 Lists</h3>
+<h3>2.3 Lists</h3>
 
 <p><em>Koara:</em></p>
 
@@ -145,7 +146,7 @@ any digit, Koara will preserve the numbering when parsed.</p>
 of multiple block elements. Because these can contain blank lines, you have to use at least 2 blank lines to break
 out of the list or start a new block without indentation.</p>
 
-<h3 id="2.4_links">2.4 Links</h3>
+<h3>2.4 Links</h3>
 
 <p><em>Koara:</em></p>
 
@@ -162,7 +163,7 @@ returns an empty link because the url should be resolved by the application.</p>
 
 <p>Inline links are simply a combination of the link text and the url.</p>
 
-<h3 id="2.5_images">2.5 Images</h3>
+<h3>2.5 Images</h3>
 
 <p><em>Koara:</em></p>
 
@@ -179,7 +180,7 @@ This is an &lt;img src=&quot;http://www.koara.io/logo.png&quot; alt=&quot;inline
 <p>Images and links are both resources. If you configure the parser to allow links but not images, the syntax will
 give you a natural fallback: Images will then become links with a prefix image: in the title.</p>
 
-<h3 id="2.6_formatting">2.6 Formatting</h3>
+<h3>2.6 Formatting</h3>
 
 <p><em>Koara:</em></p>
 
@@ -200,7 +201,7 @@ as italic text</p>
 
 <p>Formatting can span over multiple lines, and intraword emphasis is allowed.</p>
 
-<h3 id="2.7_blockquotes">2.7 Blockquotes</h3>
+<h3>2.7 Blockquotes</h3>
 
 <p><em>Koara:</em></p>
 
@@ -222,7 +223,7 @@ as italic text</p>
 
 <p>If enabled, you can use email-style blockquoting. Blockquotes can also be nested.</p>
 
-<h3 id="2.8_code">2.8 Code</h3>
+<h3>2.8 Code</h3>
 
 <p><em>Koara:</em></p>
 
